# react-native-img-buffer-save

./: CONTRIBUTING.md  ImgBufferSave.podspec  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/imgbuffersave/: ImgBufferSaveModule.kt  ImgBufferSavePackage.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/imgbuffersave/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/ImgBufferSaveExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ImgBufferSaveExample.xcodeproj/: project.pbxproj
example/ios/ImgBufferSaveExample.xcodeproj/xcshareddata/xcschemes/: ImgBufferSaveExample.xcscheme
example/src/: App.tsx
ios/: ImgBufferSave.h  ImgBufferSave.mm
src/: NativeImgBufferSave.ts  index.tsx
